# StartingFromNothing

./: .gitignore  .gitmodules  BUILD_MINGW.md  CMakeLists.txt  LICENSE  README.md  build_cpp_mingw.bat  build_mingw.bat  build_vulkan_mingw.bat  main.stderr.txt  quick_clone_deps.bat  update_and_cleanup_deps.bat  voxel.stderr.txt  voxel.stdout.txt
cmake/: embed_spv.bat  embed_spv.cmake  embed_spv.ps1
shaders/: triangle.frag  triangle.vert
src/: main.cpp  main_triangle.cpp  simple_app.cpp  voxel_game.cpp
src/ui/: Button.cpp  Button.h  Label.cpp  Label.h  MainMenuScreen.cpp  MainMenuScreen.h  Panel.cpp  Panel.h  Screen.cpp  Screen.h  UI.h  UIManager.cpp  UIManager.h  UIRenderer.cpp  UIRenderer.h  Widget.h
